--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="js/app.js" defer></script>
-    <title>login - JWT</title>
+    <title>z01-Profile</title>
 </head>
 
 <body>
